# WikiSearch

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  build.sh  clean.sh  run.sh
.github/workflows/: wikisearch.yml
client/: index.html
res/: wiki_dump.xml
src/: WikiSearch.cpp  main.cpp
src/index/: ParseIndex.cpp  ParseIndex.h  WikiPage.h
src/search/: Search.cpp  Search.h  WebSearch.cpp  WebSearch.h  test.cpp  testc.cpp
src/util/: Classifiers.h
src/utils/: Classifiers.h  ErrorHandler.h  FileIO.cpp  FileIO.h  Stemmer.c  Stemmer.h
